Fix firefox layout problem; Change starting balance

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -129,7 +129,7 @@ h1.title {
   width: 100%;
   height: 100%;
 }
-.move {
+.inventory-table .move {
   width: 100%;
   height: 100%;
 }
